JourneyPlaceInfo table
