# app/controllers/api/v1/journeys_controller.rb
@@ -6,18 +6,18 @@ class Api::V1::JourneysController < ApplicationController
   def index
     @journeys = Journey.where(user_id: doorkeeper_token.resource_owner_id)
 
-    render json: @journeys
+    render json: @journeys, include: :journey_place_infos
   end
 
   # GET /journeys/1
   def show
-    render json: @journey
+    render json: @journey, include: :journey_place_infos
   end
 
   def current_journey
     @journey = Journey.find_by(user_id: doorkeeper_token.resource_owner_id, completed: false)
 
-    render json: @journey, include: [{ trip: { include: { trip_place_infos: { include: { place: { include: [:address, :category_dictionaries] } } } } } }, :user]
+    render json: @journey, include: [{ trip: { include: { trip_place_infos: { include: { place: { include: [:address, :category_dictionaries] } } } } } }, :user, :journey_place_infos]
   end
 
   # POST /journeys
@@ -29,7 +29,10 @@ class Api::V1::JourneysController < ApplicationController
     @journey.user_id = doorkeeper_token.resource_owner_id
 
     if @journey.save
-      render json: @journey, status: :created
+      @journey.trip.places.each do |p|
+        JourneyPlaceInfo.create!(journey_id: @journey.id, place_id: p.id)
+      end
+      render json: @journey, include: :journey_place_infos, status: :created
     else
       render json: { error_message: @journey.errors.full_messages, error_code: 422 }, status: :unprocessable_entity
     end
@@ -38,9 +41,19 @@ class Api::V1::JourneysController < ApplicationController
   # PATCH/PUT /journeys/1
   def update
     if @journey.update(journey_params)
-      render json: @journey
+      render json: @journey, include: :journey_place_infos
     else
       render json: { error_message: @journey.errors.full_messages, error_code: 422 }, status: :unprocessable_entity
+    end
+  end
+
+  def update_place_status
+    journey = Journey.find(params[:journey_id])
+    jpi = JourneyPlaceInfo.find_by(journey_id: journey.id, place_id: params[:place_id])
+    if jpi.update(status: params[:status])
+      render json: jpi
+    else
+      render json: { error_message: jpi.errors.full_messages, error_code: 422 }, status: :unprocessable_entity
     end
   end
 
