# app/models/place.rb
@@ -3,4 +3,5 @@ class Place < ApplicationRecord
   has_and_belongs_to_many :category_dictionaries
   has_many :trip_place_infos
   has_many :trips, through: :trip_place_infos
+  has_many :journey_place_infos
 end
